fixed the offcanvas covering the body of work as i scrolls

--- a/index.css
+++ b/index.css
@@ -216,10 +216,8 @@ body {
 }
 
 .offcanvas-scroll {
-    position: absolute !important;
-    top: 0;
-    left: 0;
-    right: 0;
+    position: fixed !important;
+    inset: 0;
 }
 
 .offcanvas-header {
